# qt-digital-clock

./: .gitignore  CMakeLists.txt  README.md  mac-run.sh  main.cpp  mainwindow.cpp  qt-digital-clock.pro  run.sh
